2015-07-30 Fixed issue with errors when module is empty in Magic Boxes module
2015-07-29 Fixed issue with checking score in show answers mode in Animated Lesson Progress and Animated Page Progress modules
2015-07-29 Fixed issue with adding class on reset in Text module
2015-07-28 Added drag&drop feature in Table module
2015-07-28 Corrected mistakes in dictionary
2015-07-28 Added CSS classes to draggable gaps in Basic Math Gaps
2015-07-27 Fixed issue with checking score and show answers in Navigation Bar module
2015-07-27 Added group scoring
2015-07-27 Fixed issue with check mode in Graph module
2015-07-27 Added show answers mode in Graph module
2015-07-24 Added sending score in event data in Image Viewer module
2015-07-23 Added compiled Commons library in version 3.0.1 to icplayer libs
2015-07-23 Fixed issue that filled gap was not sending ItemReturned event on click with DraggableDroppableObject  in Commons (now in version 3.0.1)
2015-07-23 Fixed issue with error after reset and show answers in Limited Check module
2015-07-22 Added show/hide commands in YouTube module
2015-07-21 Fixed issue with alert on Safari Windows in Swiffy Animation module
2015-07-21 Fixed issue with wrong checking in Shape Tracing module
2015-07-21 Fixed parsing and styling in Text module
2015-07-21 Fixed issue with numerating gaps in Writing Calculation module
2015-07-21 Fixed unit tests in Text Audio & Text Selection modules
2015-07-20 Changed defining and parsing gaps in Show Answers in Math module
2015-07-16 Added new module Assessments Navigation Bar
2015-07-15 Added new module Board Game
2015-07-15 Added show answers mode to Math module connected with Text, Table and Image Gap modules
2015-07-10 Added selection by plotting in Magic Boxes module
2015-07-09 Fixed issue with wrong input in order property in Ordering module
2015-07-07 Added checking by words in Magic Boxes module
2015-07-06 Added drag&drop feature and fixed issue with events in isEquation mode in Basic Math Gaps module